# tree-sitter-clingo

./: CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: publish.yml
bindings/c/: tree-sitter-metasp.pc.in
bindings/c/tree_sitter/: tree-sitter-metasp.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_metasp/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: head-cst.txt  head.txt  statements-cst.txt  statements.txt  theory-cst.txt  theory.txt
