[package]
name = "tree-sitter-metasp"
description = "Metasp grammar for tree-sitter"
version = "1.0.5"
authors = ["Roland Kaminski", "Sven Thiele", "Amade Nemes"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "metasp"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/potassco/tree-sitter-metasp"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
