[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-metasp"
description = "Metasp grammar for tree-sitter"
version = "1.0.5"
keywords = ["incremental", "parsing", "tree-sitter", "clingo", "metasp"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [
  { name = "Roland Kaminski" },
  { name = "Sven Thiele"}
]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/potassco/tree-sitter-metasp"

[project.optional-dependencies]
core = ["tree-sitter~=0.25"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
